--- a/style.css
+++ b/style.css
@@ -582,6 +582,17 @@ textarea {
     width: 100%;
   }
 
+  .submit.area input[type=submit]{
+    border-radius: 1em;
+    border: #fff;
+    background-color: #16a083;
+
+    padding: 1em;
+    
+    cursor: pointer;
+  }
+ 
+
   /* Types of food */
 
   .food-container {
