--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
 
 *,
 *::after,
@@ -41,6 +42,34 @@ body {
   background-color: #16a083;
 }
 
+h2 {
+  font-size: 200%;
+  text-align: center;
+  word-spacing: 2px;
+  margin-top: 20px;
+  padding: 1em;
+
+  text-transform: uppercase;
+
+  font-weight: 300;
+  font-family: 'Lato', sans-serif;
+ 
+}
+
+h2::after {
+  content: " ";
+
+  display: block;
+
+  height: 2px;
+  width: 100px;
+
+  background-color: #16a083;
+  
+  margin: 0 auto;
+  margin-top: 20px;
+}
+
 /******************* Nav Bar For Desktop *******************/
 
 .navbar input[type="checkbox"],
@@ -73,6 +102,33 @@ body {
 
   height: 64px;
 }
+
+.menu-items li a::after{
+  content: '';
+  
+  position: relative;
+  right: 50px;
+  
+
+  display: block;
+  width: 100%;
+  height: 2px;
+
+  background: #16a083;
+  opacity: 0;
+
+  
+}
+
+.menu-items li a:hover::after{
+  opacity: 1;
+  transition: 0.5s;
+  right: 0px;
+}
+
+
+
+
 
 /* change the order of menu-items so logo comes at left */
 .menu-items {
@@ -308,12 +364,7 @@ body {
   background-color: rgb(0, 0, 0, 0.1);
 }
 
-#customer h2 {
-  text-align: center;
-  margin-top: 3em;
 
-  font-weight: 400;
-}
 
 .cust-detail img {
   display: block;
