--- a/style.css
+++ b/style.css
@@ -111,13 +111,15 @@ h2::after {
   height: 2px;
 
   background: #16a083;
-  opacity: 0;
-  
+ 
+  transform: scale(0);
+  transform-origin: left;   
 }
 
 .menu-items li a:hover::after{
   opacity: 1;
-  transition: 0.85s;
+  transition: 0.5s;
+  transform: scale(1);
 }
 
 
@@ -569,6 +571,10 @@ textarea {
 
   .navbar-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
     transform: rotate(-45deg);
+  }
+
+  .menu-items li a:hover::after{
+    transform: scale(0);
   }
 
   /* about us */
