--- a/style.css
+++ b/style.css
@@ -519,6 +519,8 @@ textarea {
 .footer-container {
   padding: 1.5em;
   background: rgba(25, 25, 25, 0.85);
+  
+  color: #888;
 
   display: flex;
   justify-content: space-between;
@@ -541,6 +543,8 @@ textarea {
 .fa-brands.fa-instagram:hover{
   background: linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
   border-radius: 5px;
+
+  color: #000;
 }
 
 .social ul{
@@ -765,7 +769,11 @@ textarea {
     all: unset;
   }
 
+/* Footer */
 
+.footer-container{
+  flex-direction: column;
+}
 
 
 }
