side bar position changed, as Shahrukh i Khan recommended

--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ h2::after {
 
 .menu-items {
   margin: 0 auto;
+
 }
 
 .menu-items li a::after {
@@ -139,6 +140,7 @@ h2::after {
 
 .logo {
   font-size: 3rem;
+  z-index: -1;
 }
 
 .navbar li {
@@ -644,6 +646,9 @@ textarea {
   .navbar .menu-items {
     padding-top: 100px;
     background : #fff;
+
+    position: relative;
+    top: 65px;
 
     height   : 100vh;
     max-width: 300px;
