--- a/style.css
+++ b/style.css
@@ -346,7 +346,15 @@ h2::after {
   margin : auto;
 }
 
-.food-menu {
+.menu-wrapper{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+}
+
+/* used grid instead flex for better responsiveness */
+
+/* .food-menu {
   flex-grow : 1;
   flex-basis: 30%;
   display   : flex;
@@ -355,8 +363,7 @@ h2::after {
 .menu-wrapper {
   display    : flex;
   flex-wrap  : wrap;
-  flex-shrink: 30px;
-}
+} */
 
 /* customer section */
 
