--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap");
 
 *,
 *::after,
 *::before {
   box-sizing: border-box;
-  padding   : 0;
-  margin    : 0;
+  padding: 0;
+  margin: 0;
 }
 
 /* Font size is by default 16px but instead 16px i want to keep it as 10px and and if 16px=100% then 10px will be equal to 62.5% */
@@ -21,39 +21,38 @@ body {
 /* Utility Classes */
 .container {
   max-width: 1200px;
-  width    : 90%;
-  margin   : 0 auto;
+  width: 90%;
+  margin: 0 auto;
 }
 
 .btn {
   margin-top: 1em;
-  padding   : 0.6em 1.5em;
+  padding: 0.6em 1.5em;
 
   text-decoration: none;
-  text-transform : uppercase;
-  font-weight    : 500;
+  text-transform: uppercase;
+  font-weight: 500;
 
   border-radius: 50px;
-  cursor       : pointer;
+  cursor: pointer;
 }
 
 .btn-primary {
-  color           : #fff;
+  color: #fff;
   background-color: #16a083;
 }
 
 h2 {
-  font-size   : 250%;
-  text-align  : center;
+  font-size: 250%;
+  text-align: center;
   word-spacing: 2px;
-  margin-top  : 20px;
-  padding     : 1em;
+  margin-top: 20px;
+  padding: 1em;
 
   text-transform: uppercase;
 
   font-weight: 300;
-  font-family: 'Lato', sans-serif;
-
+  font-family: "Lato", sans-serif;
 }
 
 h2::after {
@@ -62,11 +61,11 @@ h2::after {
   display: block;
 
   height: 2px;
-  width : 100px;
+  width: 100px;
 
   background-color: #16a083;
 
-  margin    : 0 auto;
+  margin: 0 auto;
   margin-top: 20px;
 }
 
@@ -87,17 +86,17 @@ h2::after {
   box-shadow: 0px 5px 10px 0px #aaa;
 
   position: fixed;
-  width   : 100%;
+  width: 100%;
 
   background: #fff;
-  color     : #000;
-  opacity   : 0.85;
+  color: #000;
+  opacity: 0.85;
 
   z-index: 5;
 }
 
 .navbar-container {
-  display        : flex;
+  display: flex;
   justify-content: space-between;
 
   height: 64px;
@@ -105,31 +104,26 @@ h2::after {
 
 .menu-items {
   margin: 0 auto;
-
 }
 
 .menu-items li a::after {
-  content: '';
+  content: "";
 
   display: block;
-  width  : 100%;
-  height : 2px;
+  width: 100%;
+  height: 2px;
 
   background: #16a083;
 
-  transform       : scale(0);
+  transform: scale(0);
   transform-origin: left;
 }
 
 .menu-items li a:hover::after {
-  opacity   : 1;
+  opacity: 1;
   transition: 0.5s;
-  transform : scale(1);
+  transform: scale(1);
 }
-
-
-
-
 
 /* change the order of menu-items so logo comes at left */
 .menu-items {
@@ -144,16 +138,16 @@ h2::after {
 }
 
 .navbar li {
-  list-style : none;
+  list-style: none;
   margin-left: 1.5rem;
-  font-size  : 1.8rem;
+  font-size: 1.8rem;
 }
 
 /* added transition to smoothen hover effect */
 .navbar a {
-  color          : #444;
+  color: #444;
   text-decoration: none;
-  font-weight    : 500;
+  font-weight: 500;
 
   transition: color 0.3s ease-in-out;
 }
@@ -165,7 +159,7 @@ h2::after {
 /******************* Main Content *******************/
 
 .bg_image img {
-  width  : 100%;
+  width: 100%;
   opacity: 0.85;
 }
 
@@ -173,8 +167,10 @@ h2::after {
 
 #showcase {
   height: 50vh;
-  background: linear-gradient(rgba(240, 240, 240, 0.144),
-      rgba(255, 255, 255, 0.366)),
+  background: linear-gradient(
+      rgba(240, 240, 240, 0.144),
+      rgba(255, 255, 255, 0.366)
+    ),
     url(./images/food-bg6.jpg);
   background-size: cover;
 
@@ -182,17 +178,17 @@ h2::after {
 }
 
 .showcase-container {
-  display        : flex;
-  flex-direction : column;
-  align-items    : center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   justify-content: center;
-  height         : 130%;
-  font-size      : 1.6rem;
+  height: 130%;
+  font-size: 1.6rem;
 }
 
 .main-title {
   text-transform: uppercase;
-  font-weight   : 600;
+  font-weight: 600;
 }
 
 /*********** about-us styling ***********/
@@ -210,15 +206,15 @@ h2::after {
 }
 
 .about-us.container {
-  display   : flex;
+  display: flex;
   background: linear-gradient(rgb(202, 213, 231), rgb(255, 255, 255));
-  padding   : 3em;
+  padding: 3em;
 
   overflow: hidden;
 }
 
 .about-text {
-  align-self  : center;
+  align-self: center;
   margin-right: 5em;
 
   animation: left-slide 1s 1 linear;
@@ -250,7 +246,7 @@ h2::after {
 
 #food h1 {
   text-align: center;
-  padding   : 2em;
+  padding: 2em;
 
   text-transform: uppercase;
 
@@ -258,12 +254,12 @@ h2::after {
 }
 
 .food img {
-  width  : 100%;
+  width: 100%;
   display: block;
 }
 
 .food-container {
-  display        : flex;
+  display: flex;
   justify-content: space-around;
 }
 
@@ -277,7 +273,7 @@ h2::after {
   width: 100%;
 
   position: absolute;
-  top     : 25%;
+  top: 25%;
 
   color: rgb(219, 219, 219);
 
@@ -289,7 +285,7 @@ h2::after {
 }
 
 .food:hover .merge {
-  transform : translateY(0%);
+  transform: translateY(0%);
   transition: 0.5s ease-in-out;
 
   opacity: 1;
@@ -297,17 +293,17 @@ h2::after {
 
 .btn.buy {
   background: #16a083;
-  color     : #fff;
-  display   : inline-block;
+  color: #fff;
+  display: inline-block;
 }
 
 .food::after {
   content: "";
 
   position: absolute;
-  top     : 0;
+  top: 0;
 
-  width : 100%;
+  width: 100%;
   height: 100%;
 
   background-color: rgba(25, 25, 25, 0.85);
@@ -316,7 +312,7 @@ h2::after {
 }
 
 .food:hover::after {
-  opacity   : 1;
+  opacity: 1;
   transition: 1s;
 }
 
@@ -324,7 +320,7 @@ h2::after {
 
 #food-menu h1 {
   text-align: center;
-  padding   : 2em;
+  padding: 2em;
 
   text-transform: uppercase;
 
@@ -333,37 +329,30 @@ h2::after {
 
 .btn.buy2 {
   padding: 0;
-  color  : #16a083;
+  color: #16a083;
 }
 
 .food-menu img {
-  width        : 200px;
+  width: 200px;
   border-radius: 10%;
 }
 
 .about-food {
   padding: 1em;
-  margin : auto;
+  
 }
 
-.menu-wrapper{
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-}
-
-/* used grid instead flex for better responsiveness */
-
-/* .food-menu {
-  flex-grow : 1;
+.food-menu {
+  flex-grow: 1;
   flex-basis: 30%;
-  display   : flex;
+  display: flex;
 }
 
 .menu-wrapper {
-  display    : flex;
-  flex-wrap  : wrap;
-} */
+  display: flex;
+  flex-wrap: wrap;
+}
+*/
 
 /* customer section */
 
@@ -371,16 +360,14 @@ h2::after {
   background-color: rgb(0, 0, 0, 0.1);
 }
 
-
-
 .cust-detail img {
   display: block;
-  width  : 100px;
-  height : 100px;
+  width: 100px;
+  height: 100px;
 
-  object-fit     : cover;
+  object-fit: cover;
   object-position: center;
-  border-radius  : 50%;
+  border-radius: 50%;
 }
 
 .customer {
@@ -389,17 +376,17 @@ h2::after {
 }
 
 .cust-box {
-  display        : flex;
-  flex-direction : column;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
-  align-items    : center;
+  align-items: center;
 
   padding: 1.25em;
 }
 
 .cust-box p {
   text-align: center;
-  max-width : 80%;
+  max-width: 80%;
 }
 
 .fa-solid {
@@ -410,14 +397,12 @@ h2::after {
 
 #contact-us {
   background-color: rgba(218, 218, 218, 0.5);
-  padding         : 5em;
+  padding: 5em;
 }
-
-
 
 .contact-us-form h3 {
   font-family: latto;
-  padding    : 1em;
+  padding: 1em;
 }
 
 .contact-us.container {
@@ -426,93 +411,87 @@ h2::after {
 
 .contact-us-form h3 {
   font-weight: 400;
-  font-size  : 2rem;
+  font-size: 2rem;
 }
 
 .office {
-  width   : 100%;
+  width: 100%;
   position: relative;
 }
 
 .office::after {
-  content: '';
+  content: "";
 
   position: absolute;
-  top     : 0;
-  height  : 100%;
-  width   : 100%;
+  top: 0;
+  height: 100%;
+  width: 100%;
 
-  background: rgba(25, 25, 25, 0.50);
+  background: rgba(25, 25, 25, 0.5);
 }
 
 .office img {
   display: block;
 
-  width : 100%;
+  width: 100%;
   height: 100%;
 
   object-fit: cover;
 }
 
 .contact-us {
-  display        : flex;
+  display: flex;
   justify-content: center;
 }
 
 .form.area p {
-
-  font-size    : 1.1rem;
+  font-size: 1.1rem;
   margin-bottom: 1em;
 }
 
 .contact-us-form {
   background-color: #fff;
-  width           : 100%;
-  padding         : 1em;
-
-
+  width: 100%;
+  padding: 1em;
 }
 
 .area {
   padding: 1em;
-  margin : 1em 0.85em;
-
+  margin: 1em 0.85em;
 }
-
 
 textarea {
   resize: none;
-
 
   margin-bottom: 2px solid #ddd;
 }
 
 .area input {
-  border       : none;
+  border: none;
   border-bottom: 2px solid #ddd;
 
   display: block;
-  width  : 100%;
+  width: 100%;
 
-  padding      : 1rem 0;
+  padding: 1rem 0;
   margin-bottom: 1rem;
 
   outline: none;
 }
 
 .form.area textarea {
-  width  : 100%;
+  width: 100%;
   outline: none;
 
-  border       : none;
+  border: none;
   border-bottom: #ddd solid 2px;
 }
 
-.submit.area input[type=submit] {
-  border-radius   : 1em;
-  border          : #fff;
+.submit.area input[type="submit"] {
+  border-radius: 1em;
+  border: #fff;
   background-color: #16a083;
-  color           : #fff;
+  color: #fff;
 
   padding: 1em;
 
@@ -521,25 +500,25 @@ textarea {
   cursor: pointer;
 }
 
-.submit.area input[type=submit]:hover {
+.submit.area input[type="submit"]:hover {
   background: #117964;
 }
 
 /* footer */
 
 .footer-container {
-  padding   : 1.5em;
+  padding: 1.5em;
   background: rgba(25, 25, 25, 0.85);
 
   color: #888;
 
-  display        : flex;
+  display: flex;
   justify-content: space-between;
-  align-items    : center;
+  align-items: center;
 }
 
 .copy-right h3 {
-  font-weight   : 500;
+  font-weight: 500;
   letter-spacing: 0.05rem;
 }
 
@@ -552,15 +531,22 @@ textarea {
 }
 
 .fa-brands.fa-instagram:hover {
-  background   : linear-gradient(45deg, #f09433 0%, #e6683c 25%, #dc2743 50%, #cc2366 75%, #bc1888 100%);
+  background: linear-gradient(
+    45deg,
+    #f09433 0%,
+    #e6683c 25%,
+    #dc2743 50%,
+    #cc2366 75%,
+    #bc1888 100%
+  );
   border-radius: 5px;
 
   color: #000;
 }
 
 .social ul {
-  display        : flex;
-  width          : 100px;
+  display: flex;
+  width: 100px;
   justify-content: space-between;
 
   font-size: 2em;
@@ -568,18 +554,28 @@ textarea {
 
 .social li {
   list-style: none;
-  cursor    : pointer;
+  cursor: pointer;
 }
-
-
 
 /*********** Media Queries ***********/
 
+@media (max-width: 1084px){
+
+.food-menu{
+  flex-wrap: wrap;
+}
+.about-food {
+  flex-shrink: 1;
+  
+}
+
+}
+
 @media (max-width: 768px) {
   .logo img {
-    width   : 64px;
+    width: 64px;
     position: relative;
-    bottom  : 10px;
+    bottom: 10px;
   }
 
   .navbar {
@@ -592,18 +588,18 @@ textarea {
   }
 
   .navbar-container {
-    display : block;
+    display: block;
     position: relative;
-    height  : 64px;
+    height: 64px;
   }
 
   .navbar-container input[type="checkbox"] {
     position: absolute;
-    display : block;
+    display: block;
 
     height: 70px;
-    width : 40px;
-    left  : 20px;
+    width: 40px;
+    left: 20px;
 
     z-index: 3;
 
@@ -612,16 +608,16 @@ textarea {
 
   .navbar-container .hamburger-lines {
     display: block;
-    height : 22px;
-    width  : 28px;
+    height: 22px;
+    width: 28px;
 
     position: absolute;
-    top     : 20px;
-    left    : 20px;
-    z-index : 2;
+    top: 20px;
+    left: 20px;
+    z-index: 2;
 
-    display        : flex;
-    flex-direction : column;
+    display: flex;
+    flex-direction: column;
     justify-content: space-between;
   }
 
@@ -629,7 +625,7 @@ textarea {
     display: block;
 
     height: 4px;
-    width : 100%;
+    width: 100%;
 
     border-radius: 10px;
 
@@ -638,7 +634,7 @@ textarea {
 
   .navbar-container .hamburger-lines .line1 {
     transform-origin: 0% 0%;
-    transition      : transform 0.4s ease-in-out;
+    transition: transform 0.4s ease-in-out;
   }
 
   .navbar-container .hamburger-lines .line2 {
@@ -647,24 +643,24 @@ textarea {
 
   .navbar-container .hamburger-lines .line3 {
     transform-origin: 0% 100%;
-    transition      : transform 0.4s ease-in-out;
+    transition: transform 0.4s ease-in-out;
   }
 
   .navbar .menu-items {
     padding-top: 100px;
-    background : #fff;
+    background: #fff;
 
     position: relative;
     top: 65px;
 
-    height   : 100vh;
+    height: 100vh;
     max-width: 300px;
     transform: translateX(-150%);
 
-    display       : flex;
+    display: flex;
     flex-direction: column;
 
-    margin-left : -40px;
+    margin-left: -40px;
     padding-left: 50px;
 
     transition: transform 0.5s ease-in-out;
@@ -673,30 +669,30 @@ textarea {
 
   .navbar .menu-items li {
     margin-bottom: 3rem;
-    font-size    : 2rem;
-    font-weight  : 500;
+    font-size: 2rem;
+    font-weight: 500;
   }
 
   .logo {
-    position : absolute;
-    top      : 10px;
-    right    : 15px;
+    position: absolute;
+    top: 10px;
+    right: 15px;
     font-size: 3rem;
   }
 
-  .navbar-container input[type="checkbox"]:checked~.menu-items {
+  .navbar-container input[type="checkbox"]:checked ~ .menu-items {
     transform: translateX(0);
   }
 
-  .navbar-container input[type="checkbox"]:checked~.hamburger-lines .line1 {
+  .navbar-container input[type="checkbox"]:checked ~ .hamburger-lines .line1 {
     transform: rotate(45deg);
   }
 
-  .navbar-container input[type="checkbox"]:checked~.hamburger-lines .line2 {
+  .navbar-container input[type="checkbox"]:checked ~ .hamburger-lines .line2 {
     transform: scaleY(0);
   }
 
-  .navbar-container input[type="checkbox"]:checked~.hamburger-lines .line3 {
+  .navbar-container input[type="checkbox"]:checked ~ .hamburger-lines .line3 {
     transform: rotate(-45deg);
   }
 
@@ -717,54 +713,46 @@ textarea {
   }
 
   .about-text {
-    text-align : center;
+    text-align: center;
     margin-left: 5em;
   }
 
   /* Food Menu */
 
-  .menu-wrapper{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr;
-  }
+.food-menu{
   
-
-  /* .menu-wrapper {
-    flex-direction: column;
-  }
+  margin-left: 10px;
+}
 
   .about-food {
     margin: 0;
-  } */
+  }
 
   /* Customer Review */
 
   .customer {
     flex-direction: column;
-
   }
-
 
   .cust-detail img {
     position: relative;
-    right   : 0.65em;
+    right: 0.65em;
   }
 
   /* contact us */
 
   #contact-us {
     background-color: rgba(218, 218, 218, 0.5);
-    padding         : 0.50em;
+    padding: 0.5em;
   }
 
   .contact-us {
     flex-direction: column;
   }
 
-  .submit.area input[type=submit] {
+  .submit.area input[type="submit"] {
     display: block;
-    margin : 0 auto;
+    margin: 0 auto;
   }
 
   /* Types of food */
@@ -777,14 +765,13 @@ textarea {
     position: unset;
 
     transform: translateY(0%);
-    opacity  : 1;
+    opacity: 1;
 
     color: #000;
 
-
     padding: 1em;
 
-    background-color: rgba(218, 218, 218, 0.5)
+    background-color: rgba(218, 218, 218, 0.5);
   }
 
   .food::after {
@@ -797,8 +784,6 @@ textarea {
     flex-direction: column;
     margin-top: 2em;
   }
-
-
 }
 
 /* types of food 
@@ -828,11 +813,8 @@ textarea {
 *    Animation disabled as we aren't able to hover images over mobile phone's/  
 */
 
-@media (max-width:500px) {
-  .menu-wrapper{
-    display: grid;
-    grid-template-columns: 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+ @media (max-width: 460px) {
+  .food-menu.m2{
+    
   }
-  
-}
+} 
