testimonials UI updated

--- a/style.css
+++ b/style.css
@@ -376,7 +376,7 @@ h2::after {
 
 .cust-box {
   display: flex;
-  flex-direction: column;
+  flex-direction: column-reverse;
   justify-content: center;
   align-items: center;
 
